<resources>
    <string name="app_name">MangaQ</string>
    <string name="registrar">Registrar</string>
    <string name="criar_conta">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="logout">Logout</string>
    <string name="digite_seu_sobrenome">Digite seu sobrenome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="nick">Nick</string>
    <string name="digite_sua_apelido">Digite sua apelido</string>
    <string name="email">Email</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="senha">Senha</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="mang_q">MangáQ</string>
    <string name="perfil">Perfil</string>
    <string name="voltar">voltar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="salvar_altera_es">salvar alterações</string>
    <string name="salvar">salvar</string>
    <string name="escolha_n_o_carregada">escolha não carregada</string>
    <string name="fa_a_sua_escolha">Faça sua escolha</string>
</resources>
