<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="40dp"
        android:text="@string/registrar"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_nome"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nome"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sobrenome"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/edit_sobrenome"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite_seu_sobrenome"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_nick"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite_sua_apelido"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite_seu_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingHorizontal="40dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/digite_sua_senha"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="65dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="voltar"
            android:text="@string/cancelar"
            android:textColor="#F44336"
            android:textSize="15sp"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#F44336"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cadastrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/criar_conta"
            android:textColor="#009688"
            android:textSize="15sp"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#009688"
            app:strokeWidth="2dp" />

    </LinearLayout>
</LinearLayout>