<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#ffffff"
    android:elevation="4dp"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="0dp"
        android:background="#FF454E"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="360sp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/perfil"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/btn_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/asd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/nome"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textColor="#505050"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/sobrenome"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/sobrenome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textColor="#505050"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/nick"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textColor="#505050"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textColor="#505050"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="35dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="voltar"
            android:text="@string/voltar"
            android:textColor="#009688"
            android:textSize="15sp"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#009688"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cadastrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/editar_perfil"
            android:textColor="#2196F3"
            android:textSize="15sp"
            app:backgroundTint="#00FFFFFF"
            app:cornerRadius="8dp"
            app:rippleColor="#33AAAAAA"
            app:strokeColor="#2196F3"
            app:strokeWidth="2dp" />

    </LinearLayout>
</LinearLayout>